--- a/Group7_Assignment2/src/main/resources/templates/index.html
+++ b/Group7_Assignment2/src/main/resources/templates/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>Group Page</title>
 </head>
 <body>
+
+	<div th:each="imageName : ${groupProfile.imageNames}">
+		<!-- Updated th:src to properly handle the imageName variable -->
+		<img th:src="@{'/images/' + ${imageName}}" alt="Image" />
+	</div>
 	<div>
 		<p th:text="${groupProfile.groupDescription}"></p>
 	</div>
-
 
 </body>
 </html>
