Added Ian's Model Class

--- a/Group7_Assignment2/bin/src/main/resources/templates/index.html
+++ b/Group7_Assignment2/bin/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
 
 	<div class="image-container">
 		<div th:each="imageName : ${groupProfile.imageNames}">
-			<a th:href="@{'/bio/' + ${imageName}}"> <img
-				th:src="@{'/images/' + ${imageName}+'.png'}" alt="Image" />
+			<a th:href="@{'/bio/' + imageName}"> <img
+				th:src="@{'/images/' + ${imageName}}" alt="Image" />
 			</a>
 		</div>
 	</div>
